--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Cesium Starter App</title>
-  <script src="ThirdParty/Cesium/Cesium.js"></script>
-  <style>
-      @import url(ThirdParty/Cesium/Widgets/widgets.css);
-      html, body, #cesiumContainer {
-          width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
-      }
-  </style>
+
+<!-- Use correct character set. -->
+<meta charset="utf-8">
+<!-- Tell IE to use the latest, best version. -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=5, user-scalable=no">
+<title>VRcontrol</title>
+
+<script src="ThirdParty/Cesium/Cesium.js"></script>
+<style>
+@import url(ThirdParty/Cesium/Widgets/widgets.css);
+
+html, body, #cesiumContainer {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+
+.toolbar-left {
+	display: block;
+	position: absolute;
+	top: 5px;
+	left: 5px;
+}
+</style>
 </head>
 <body>
-  <div id="cesiumContainer"></div>
-  <script src="Source/App.js"></script>
+	<div id="cesiumContainer"></div>
+	<div class="toolbar-left">
+		<button onclick="showPathCoordinates()">Show Path Coordinates</button>
+		<button onclick="resetPath()">Reset Path</button>
+	</div>
+	<script src="Source/App.js"></script>
 </body>
 </html>
